UCSFD8-160 - Fix letter spacing on h2 style.

--- a/docroot/themes/custom/ucsf/assets/css/style.css
+++ b/docroot/themes/custom/ucsf/assets/css/style.css
@@ -4064,7 +4064,7 @@ h2 {
   @media (min-width: 600px) {
     h2 {
       font-size: 56px;
-      letter-spacing: -2px; } }
+      letter-spacing: -1.2px; } }
 
 h3 {
   line-height: 1; }
@@ -4906,7 +4906,7 @@ textarea {
     @media (min-width: 600px) {
       .article-header h1 {
         font-size: 56px;
-        letter-spacing: -2px; } }
+        letter-spacing: -1.2px; } }
 
 .article-feature-banner {
   display: grid;
@@ -5563,7 +5563,7 @@ figure.align-center figcaption {
     @media (min-width: 600px) {
       .recommended-article__copy h2 {
         font-size: 56px;
-        letter-spacing: -2px; } }
+        letter-spacing: -1.2px; } }
     .recommended-article__copy h2 a {
       text-decoration: none;
       color: #052049; }
