--- a/docroot/themes/custom/ucsf/scss/tools/_mixins-font-styles.scss
+++ b/docroot/themes/custom/ucsf/scss/tools/_mixins-font-styles.scss
@@ -95,7 +95,7 @@
 
 @mixin fs-heading-two-md {
   font-size: 56px;
-  letter-spacing: -2px;
+  letter-spacing: -1.2px;
 }
 
 @mixin fs-heading-two-sm {
